# social-media-crawler

./: .gitignore  README.md  pyproject.toml
src/Social_Media_Crawler/: crawler.py  scrapers.py  search_engines.py
